--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 # Socket.IO 连接配置
 VITE_SOCKET_URL=ws://localhost:3000
-VITE_APP_TITLE=极简课堂客户端
+VITE_APP_TITLE=信息科技课堂
 
 # 开发环境配置
 VITE_DEV_PORT=5173
+
+# 通义千问（DashScope）API Key（用于学生端 ChatView）
+# 注意：请在本地环境中填写，不要提交到代码仓库
+VITE_DASHSCOPE_API_KEY=sk-a547ca37f08141ea8e24f6a2a087aa0b
