--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.4.4",
+    "idraw": "^0.4.3",
+    "openai": "^5.20.3",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.5",
-    "element-plus": "^2.4.4",
-    "@element-plus/icons-vue": "^2.3.1"
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
