--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ VITE_DEV_PORT=5173
 # 通义千问（DashScope）API Key（用于学生端 ChatView）
 # 注意：请在本地环境中填写，不要提交到代码仓库
 VITE_DASHSCOPE_API_KEY=sk-a547ca37f08141ea8e24f6a2a087aa0b
+
+VITE_SOCKET_URL=http://192.168.110.145:3000
