--- a/.env
+++ b/.env
@@ -1,12 +1,15 @@
-# Socket.IO 连接配置
-VITE_SOCKET_URL=ws://localhost:3000
+# 应用标题
 VITE_APP_TITLE=信息科技课堂
 
-# 开发环境配置
-VITE_DEV_PORT=5173
+# Socket.IO 服务器地址
+# 开发环境通常使用 localhost:3000
+VITE_SOCKET_URL=http://localhost:3000
 
-# 通义千问（DashScope）API Key（用于学生端 ChatView）
-# 注意：请在本地环境中填写，不要提交到代码仓库
-VITE_DASHSCOPE_API_KEY=sk-a547ca37f08141ea8e24f6a2a087aa0b
+# AI助手服务密钥 (可选)
+# 用于Activity3的问卷设计助手功能
+VITE_COZE_KEY=your_coze_api_key_here
 
-VITE_SOCKET_URL=http://192.168.43.102:3000
+# SSL配置 (可选)
+# 设置为 true 启用HTTPS开发服务器
+# 需要先运行 pnpm ssl:generate 生成证书
+VITE_USE_SSL=true
