--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,6 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
-
 # Build outputs
 coverage
 *.tsbuildinfo
@@ -41,3 +34,15 @@ Thumbs.db
 # pnpm
 .pnpm-debug.log*
 .pnpm-store/
+
+# Cursor AI
+.cursor/
+
+# Memory files
+.cunzhi-memory/
+
+# SSL certificates (generated locally)
+ssl/
+*.pem
+*.key
+*.crt
