--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "ssl:generate": "tsx scripts/generate-ssl.ts",
+    "ssl:clean": "rimraf ssl"
   },
   "dependencies": {
+    "@coze/api": "^1.3.7",
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.4.4",
-    "idraw": "^0.4.3",
-    "openai": "^5.20.3",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.0",
@@ -25,6 +26,8 @@
     "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.0",
     "typescript": "^5.5.4",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "tsx": "^4.20.5",
+    "rimraf": "^5.0.5"
   }
 }
