--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_APP_TITLE=信息科技课堂
 
 # Socket.IO 服务器地址
 # 开发环境通常使用 localhost:3000
-VITE_SOCKET_URL=https://localhost:3000
+VITE_SOCKET_URL=http://localhost:3000
 
 # AI助手服务密钥 (可选)
 # 用于Activity3的问卷设计助手功能
