--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "dependencies": {
     "@coze/api": "^1.3.7",
     "@element-plus/icons-vue": "^2.3.1",
+    "@msgpack/msgpack": "^3.0.0",
     "echarts": "^5.4.3",
     "echarts-wordcloud": "^2.1.0",
     "element-plus": "^2.4.4",
-    "pinia": "^2.1.7",
+    "pinia": "^3.0.1",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
@@ -30,9 +31,9 @@
     "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.0",
     "cross-env": "^7.0.3",
-    "typescript": "^5.5.4",
-    "vite": "^5.0.8",
+    "rimraf": "^5.0.5",
     "tsx": "^4.20.5",
-    "rimraf": "^5.0.5"
+    "typescript": "^5.5.4",
+    "vite": "^5.0.8"
   }
 }
