--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts-wordcloud": "^2.1.0",
     "element-plus": "^2.4.4",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
