--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pinia-plugin-persistedstate": "^4.5.0",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/echarts": "^4.9.22",
