--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "echarts": "^5.4.3",
     "echarts-wordcloud": "^2.1.0",
     "element-plus": "^2.4.4",
+    "jszip": "^3.10.1",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.5.0",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.0",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.2.5",
     "xlsx": "^0.18.5"
   },
